--- a/index.html
+++ b/index.html
@@ -4,35 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Her er titlen</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <h1>her er headeren</h1>
-        <nav>
-            <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, a. </p>
-            <article>
-                <strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, inventore?</strong>
-                <aside><h2> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, odit.</h2></aside>
-            </article>
-        </section>
-        <a href="#"><img src="https://via.placeholder.com/150" alt=""></a>
-        <button>tryk</button>
-        <div>her er en div</div>
-    </main>
-
-    <footer> her er footeren</footer>
-    
     
 </body>
 </html>
